# activities-support

kactivities-c/: CMakeLists.txt  commands.js  kactivities_c.cpp  utils.h
kactivities-py/: update.sh
kactivities-py/KActivities/: __init__.py
python-kactivities/: main.py
python-kactivities/KActivities/: __init__.py
vim/: README
vim/org.kde.activities/: XlibGetWindowId.py  main.py  main.vim
vim/org.kde.activities/KActivities/: __init__.py
